--- a/estilo/style.css
+++ b/estilo/style.css
@@ -8,31 +8,36 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-html, body{
+body{
+    background: url('../imagens/fundo-madeira.jpg');
+    background-attachment: fixed;
+    background-size: cover;   
     height: 100vh;
     width: 100vw; 
 
 }
 
-body{
-    background: url('../imagens/fundo-madeira.jpg') no-repeat top center;
-    background-color: cover;
-    background-attachment: fixed;
-}
-
 main{
-    position: relative;
-    height: 100vh;    
-
+    position: relative;    
+    height: 100vh;
 }
 
 section#telefone{
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 45%;
     transform: translate  (-50%, -50%);
 
     height: 627px;
     width: 311px;
     background: url('../imagens/frame-iphone.png') no-repeat;
+}
+
+iframe#tela{
+    position:relative;
+    top: 80px; 
+    left: 21px;
+    width: 270px;
+    height: 473px;
+    
 }
