--- a/estilo/style.css
+++ b/estilo/style.css
@@ -8,18 +8,23 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-body{
-    background: url('../imagens/fundo-madeira.jpg');
-    background-attachment: fixed;
-    background-size: cover;   
+body, html{
     height: 100vh;
-    width: 100vw; 
+    width: 100vw;
+}
+
+body{
+    background: url('../imagens/fundo-madeira.jpg') no-repeat top center;
+    background-attachment: fixed;
+    background-size: cover;
+    height: 100vh;
+    width: 100vw;
 
 }
 
 main{
     position: relative;    
-    height: 100vh;
+    height: 10vh;
 }
 
 section#telefone{
@@ -40,4 +45,19 @@ iframe#tela{
     width: 270px;
     height: 473px;
     
+}
+
+section#redes-sociais img{
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.438);
+    
+}
+
+section#redes-sociais img:hover{
+    border: 2px solid #ffffffbb;
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px black;
+    transition: transform .3s;
 }
